--- a/manifest.json
+++ b/manifest.json
@@ -2,6 +2,7 @@
   "name": "The Real English Guide",
   "short_name": "EnglishGuide",
   "start_url": ".",
+  "scope": ".",
   "display": "standalone",
   "background_color": "#ffffff",
   "theme_color": "#007aff",
